append write data to csv code

--- a/amazon_crawling.ipynb
+++ b/amazon_crawling.ipynb
@@ -2,23 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://www.amazon.com/Best-Sellers/zgbs/toys-and-games/165993011#1\\n'"
-      ]
-     },
-     "execution_count": 355,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -*- coding: UTF-8 -*-\n",
     "import requests\n",
@@ -26,7 +15,7 @@
     "from bs4 import BeautifulSoup \n",
     "import re\n",
     "import time \n",
-    "\n",
+    "import csv\n",
     "## get the categories list/url list\n",
     "f = open(\"/Users/liaoyuyu/Documents/Juvolicious/amazon_list.txt\", \"r\")\n",
     "amazon_list = []\n",
@@ -41,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -50,210 +39,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.1683781147\n"
+      "20.1258881092\n"
      ]
     }
    ],
    "source": [
-    "top_seller_product = []\n",
-    "# record start time\n",
-    "time_Start = time.time() \n",
+    "#top_seller_product = []\n",
+    "# output data\n",
+    "with open('/Users/liaoyuyu/Documents/Juvolicious/Data/top_amazon.csv', 'a') as f:\n",
+    "    fieldnames = ['top_days', 'prod_title', 'prod_url', 'image_url', 'prod_review_score', \n",
+    "              'prod_review_count', 'sales_price', 'offer_count', 'lowest_price']\n",
+    "    product_detail_csv = csv.DictWriter(f, fieldnames = fieldnames)\n",
+    "    #product_detail_csv.writeheader()\n",
+    "    \n",
+    "    # time start\n",
+    "    time_Start = time.time() \n",
     "\n",
-    "#product_detail = open('/Users/liaoyuyu/Documents/Juvolicious/Amazon_top_seller.csv', 'r')\n",
-    "for item in soup.select('.zg_itemWrapper'):\n",
-    "    # product category\n",
-    "    # product sales_rank\n",
-    "    # days in the top 100\n",
-    "    top_days = item.find_all(name = 'td', attrs = 'zg_daysInList')[0].string \n",
-    "    #item.select('.zg_daysInList')[0].text\n",
+    "    #product_detail = open('/Users/liaoyuyu/Documents/Juvolicious/Amazon_top_seller.csv', 'r')\n",
+    "    for item in soup.select('.zg_itemWrapper'):\n",
+    "        # product category\n",
+    "        # product sales_rank\n",
+    "        # days in the top 100\n",
+    "        top_days = item.find_all(name = 'td', attrs = 'zg_daysInList')[0].string \n",
+    "        #item.select('.zg_daysInList')[0].text\n",
     "\n",
-    "    # product title - prod_title\n",
-    "    prod_title = item.find_all('div', {'class':'zg_title'})[0].string\n",
+    "        # product title - prod_title\n",
+    "        prod_title = item.find_all('div', {'class':'zg_title'})[0].string\n",
     "\n",
-    "    # product url - prod_url \n",
-    "    prod_url = item.find_all('div', {'class':'zg_title'})[0].contents[0]['href'].strip()\n",
+    "        # product url - prod_url \n",
+    "        prod_url = item.find_all('div', {'class':'zg_title'})[0].contents[0]['href'].strip()\n",
     "\n",
-    "    # product image - image_url\n",
-    "    image_url = item.select('img')[0]['src']\n",
+    "        # product image - image_url\n",
+    "        image_url = item.select('img')[0]['src']\n",
     "\n",
-    "    # product score - prod_review_score\n",
-    "    if item.select(\".a-icon-alt\") == []:\n",
-    "        prod_review_score =  None\n",
-    "    else:\n",
-    "        prod_review_score = item.select(\".a-icon-alt\")[0].string\n",
+    "        # product score - prod_review_score\n",
+    "        if item.select(\".a-icon-alt\") == []:\n",
+    "            prod_review_score =  None\n",
+    "        else:\n",
+    "            prod_review_score = item.select(\".a-icon-alt\")[0].string\n",
     "\n",
-    "    # product reviewr - prod_review_count\n",
-    "    if item.select('.a-link-normal') == []:\n",
-    "        prod_review_count = None\n",
-    "    else:\n",
-    "        prod_review_count = item.select('.a-link-normal')[len(item.select('.a-link-normal'))-1].string\n",
+    "        # product reviewr - prod_review_count\n",
+    "        if item.select('.a-link-normal') == []:\n",
+    "            prod_review_count = None\n",
+    "        else:\n",
+    "            prod_review_count = item.select('.a-link-normal')[len(item.select('.a-link-normal'))-1].string\n",
     "\n",
-    "    # product sales_price\n",
-    "    sales_price = item.select('strong.price')[0].string\n",
+    "        # product sales_price\n",
+    "        sales_price = item.select('strong.price')[0].string\n",
     "\n",
-    "    # product offer_count\n",
-    "    if item.find_all(name = 'div', attrs = 'zg_usedPrice') == []:\n",
-    "        offer_count =  None\n",
-    "    else:\n",
-    "        offer_count = item.find_all(name = 'div', attrs = 'zg_usedPrice')[0].contents[0].string\n",
-    "\n",
-    "    # product lowest_price\n",
-    "    if item.select('span.price') == []:\n",
-    "        lowest_price = None\n",
-    "    else:\n",
-    "        lowest_price = item.select('span.price')[0].text\n",
-    "    # product crawl_url\n",
-    "    # product crawl_time\n",
-    "    time.sleep(1)\n",
-    "    top_seller_product.append({'top_days':top_days, 'prod_title':prod_title, 'prod_url':prod_url, 'image_url':image_url, \n",
+    "        # product offer_count\n",
+    "        if item.find_all(name = 'div', attrs = 'zg_usedPrice') == []:\n",
+    "            offer_count =  None\n",
+    "        else:\n",
+    "            offer_count = item.find_all(name = 'div', attrs = 'zg_usedPrice')[0].contents[0].string\n",
+    "            offer_count = re.findall(\"\\\\d+\", offer_count)[0]\n",
+    "            #print offer_count\n",
+    "            # m = re.match('\\\\d\\\\d', offer_count)\n",
+    "            # m.group(0)\n",
+    "            \n",
+    "        # product lowest_price\n",
+    "        if item.select('span.price') == []:\n",
+    "            lowest_price = None\n",
+    "        else:\n",
+    "            lowest_price = item.select('span.price')[0].text\n",
+    "        # product crawl_url\n",
+    "        # product crawl_time\n",
+    "        time.sleep(1)\n",
+    "        product_detail_csv.writerow({'top_days':top_days, 'prod_title':prod_title, 'prod_url':prod_url, 'image_url':image_url, \n",
     "                          'prod_review_score':prod_review_score, 'prod_review_count':prod_review_count, \n",
     "                          'sales_price':sales_price, 'offer_count':offer_count, 'lowest_price':lowest_price})\n",
-    "    \n",
-    "# write file \n",
-    "product_detail.write()\n",
+    "        #top_seller_product = [[top_days, prod_title, prod_url, image_url, prod_review_score, prod_review_count, sales_price,\n",
+    "        #                        offer_count, lowest_price]]\n",
+    "        #product_detail_csv.writerows(top_seller_product)\n",
+    "        \n",
     "# record stop time\n",
-    "product_detail.close()\n",
+    "#f.close()\n",
     "time_Stop = time.time() \n",
     "print time_Stop-time_Start"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 386,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_url</th>\n",
-       "      <th>lowest_price</th>\n",
-       "      <th>offer_count</th>\n",
-       "      <th>prod_review_count</th>\n",
-       "      <th>prod_review_score</th>\n",
-       "      <th>prod_title</th>\n",
-       "      <th>prod_url</th>\n",
-       "      <th>sales_price</th>\n",
-       "      <th>top_days</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>http://ecx.images-amazon.com/images/I/51cOYtYw...</td>\n",
-       "      <td>$11.00</td>\n",
-       "      <td>50 new</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3.6 out of 5 stars</td>\n",
-       "      <td>Shopkins Easter Eggs Set of 3 Eggs -...</td>\n",
-       "      <td>http://www.amazon.com/Shopkins-Easter-Eggs-Set...</td>\n",
-       "      <td>$19.49</td>\n",
-       "      <td>25 days in the top 100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>http://ecx.images-amazon.com/images/I/41o5vbbE...</td>\n",
-       "      <td>$13.48</td>\n",
-       "      <td>5 used &amp; new</td>\n",
-       "      <td>352</td>\n",
-       "      <td>4.6 out of 5 stars</td>\n",
-       "      <td>Holy Stone RC Cartoon Race Car with A...</td>\n",
-       "      <td>http://www.amazon.com/Holy-Stone-Cartoon-Actio...</td>\n",
-       "      <td>$15.50</td>\n",
-       "      <td>63 days in the top 100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>http://ecx.images-amazon.com/images/I/51XpQYrw...</td>\n",
-       "      <td>$0.01</td>\n",
-       "      <td>64 new</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2.1 out of 5 stars</td>\n",
-       "      <td>Shopkins Series 4 Surprise Egg (1 Egg)</td>\n",
-       "      <td>http://www.amazon.com/Shopkins-Series-Surprise...</td>\n",
-       "      <td>$0.01</td>\n",
-       "      <td>30 days in the top 100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>http://ecx.images-amazon.com/images/I/41XdzhVq...</td>\n",
-       "      <td>$16.00</td>\n",
-       "      <td>76 new</td>\n",
-       "      <td>965</td>\n",
-       "      <td>4.9 out of 5 stars</td>\n",
-       "      <td>Green Toys TEA01R multi one size</td>\n",
-       "      <td>http://www.amazon.com/Green-Toys-TEA01R-multi-...</td>\n",
-       "      <td>$22.29</td>\n",
-       "      <td>120 days in the top 100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>http://ecx.images-amazon.com/images/I/31W8Xi3t...</td>\n",
-       "      <td>$8.99</td>\n",
-       "      <td>24 new</td>\n",
-       "      <td>790</td>\n",
-       "      <td>4.4 out of 5 stars</td>\n",
-       "      <td>Vinyl Mini Dinosaurs (72 count)</td>\n",
-       "      <td>http://www.amazon.com/Vinyl-Mini-Dinosaurs-72-...</td>\n",
-       "      <td>$10.00</td>\n",
-       "      <td>721 days in the top 100</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           image_url lowest_price  \\\n",
-       "0  http://ecx.images-amazon.com/images/I/51cOYtYw...       $11.00   \n",
-       "1  http://ecx.images-amazon.com/images/I/41o5vbbE...       $13.48   \n",
-       "2  http://ecx.images-amazon.com/images/I/51XpQYrw...        $0.01   \n",
-       "3  http://ecx.images-amazon.com/images/I/41XdzhVq...       $16.00   \n",
-       "4  http://ecx.images-amazon.com/images/I/31W8Xi3t...        $8.99   \n",
-       "\n",
-       "    offer_count prod_review_count   prod_review_score  \\\n",
-       "0        50 new                 5  3.6 out of 5 stars   \n",
-       "1  5 used & new               352  4.6 out of 5 stars   \n",
-       "2        64 new                22  2.1 out of 5 stars   \n",
-       "3        76 new               965  4.9 out of 5 stars   \n",
-       "4        24 new               790  4.4 out of 5 stars   \n",
-       "\n",
-       "                                 prod_title  \\\n",
-       "0   Shopkins Easter Eggs Set of 3 Eggs -...   \n",
-       "1  Holy Stone RC Cartoon Race Car with A...   \n",
-       "2    Shopkins Series 4 Surprise Egg (1 Egg)   \n",
-       "3          Green Toys TEA01R multi one size   \n",
-       "4           Vinyl Mini Dinosaurs (72 count)   \n",
-       "\n",
-       "                                            prod_url sales_price  \\\n",
-       "0  http://www.amazon.com/Shopkins-Easter-Eggs-Set...      $19.49   \n",
-       "1  http://www.amazon.com/Holy-Stone-Cartoon-Actio...      $15.50   \n",
-       "2  http://www.amazon.com/Shopkins-Series-Surprise...       $0.01   \n",
-       "3  http://www.amazon.com/Green-Toys-TEA01R-multi-...      $22.29   \n",
-       "4  http://www.amazon.com/Vinyl-Mini-Dinosaurs-72-...      $10.00   \n",
-       "\n",
-       "                  top_days  \n",
-       "0   25 days in the top 100  \n",
-       "1   63 days in the top 100  \n",
-       "2   30 days in the top 100  \n",
-       "3  120 days in the top 100  \n",
-       "4  721 days in the top 100  "
-      ]
-     },
-     "execution_count": 386,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame(top_seller_product)\n",
-    "df.head()"
    ]
   }
  ],
