--- a/amazon_crawling.ipynb
+++ b/amazon_crawling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -23,8 +23,9 @@
     "    amazon_list.append(line)\n",
     "f.close()\n",
     "## crawling website  \n",
+    "useragent = {\"User-Agent\":\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.116 Safari/537.36\"}\n",
     "url = amazon_list[0]\n",
-    "res = requests.get(url).text.encode(\"utf8\")\n",
+    "res = requests.get(url, headers = useragent).text.encode(\"utf8\")\n",
     "soup = BeautifulSoup(res, 'html.parser')"
    ]
   },
